vault-citrix-secret/minimal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    ingress.citrix.com/frontend-ip: "10.102.33.42"
    kubernetes.io/ingress.class: "citrix"
    ingress.citrix.com/certificate-file: "mycert"
    ingress.citrix.com/insecure-termination: "redirect"
spec:
  tls:
    - secretName:
  rules:
  - host: citrixdemo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
